--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -6,6 +6,9 @@ events {
 }
 
 http {
+  proxy_buffer_size   128k;
+  proxy_buffers   4 256k;
+  proxy_busy_buffers_size   256k;
   access_log /dev/stdout;
 
   upstream app {
